tests/ui/unresolved_type.pea
fn foo(x: does_not_exist) {}
